infra/k8s/profile-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: profile-service
  namespace: waypoint
spec:
  selector:
    app: profile-service
  ports:
    - port: 3010
      targetPort: 3010
